--- a/view/index.html
+++ b/view/index.html
@@ -7,10 +7,9 @@
 </head>
 <body>
     <h2>index</h2>
-    <a href="test.html">to test</a>
-    
-    
-    <br />
-    <img src="imgs/201604131460701467_1.jpg" alt="">
+    <a href="/docs/imgs/test.html">to test</a>
+    <div>
+        <img src="imgs/201604131460701467_1.jpg" alt="">
+    </div>
 </body>
 </html>
