링크 경로 수정

--- a/view/index.html
+++ b/view/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h2>index</h2>
-    <a href="/view/test.html">to test</a>
+    <a href="./test.html">to test</a>
     <div>
-        <img src="/imgs/201604131460701467_1.jpg" alt="">
+        <img src="../imgs/201604131460701467_1.jpg" alt="">
     </div>
 </body>
 </html>
